tests/baselines/reference/copyrightWithoutNewLine1.errors.txt
==== tests/cases/compiler/copyrightWithoutNewLine1.ts (4 errors) ====
    /*****************************
    * (c) Copyright - Important
    ****************************/
    import model = require("./greeter")
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"./greeter"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    var el = document.getElementById('content');
             ~~~~~~~~
!!! error TS2095: Could not find symbol 'document'.
    var greeter = new model.Greeter(el);
                      ~~~~~
!!! error TS2095: Could not find symbol 'model'.
    /** things */
    greeter.start();